--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" oncontextmenu="return false;">
+<!-- <html lang="en" oncontextmenu="return false;"> -->
+  <html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -61,13 +62,13 @@ ________________________________________________________________________________
 
 
     <section id="home">
-      <div class="circle1 transtion"></div>
-      <div class="circle2 transtion"></div>
+      <div class="circle1"></div>
+      <div class="circle2"></div>
       <div class="container"></div>
-      <div class="profile-photo"></div>
+      <button class="profile-photo"></button>
       <div id="dialog-bg"></div>
       <dialog>
-        <p>×</p>
+        <button>×</button>
       </dialog>
       <h3 id="hi2">Surojit Mondal</h3>
       <div class="button-on-home">
@@ -95,14 +96,14 @@ ________________________________________________________________________________
 
 
     <section id="photos">
-      <div class="photo-prop"></div>
-      <div class="photo-prop"></div>
-      <div class="photo-prop"></div>
-      <div class="photo-prop"></div>
-      <div class="photo-prop"></div>
-      <div class="photo-prop"></div>
-      <div class="photo-prop"></div>
-      <div class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop"></div>
     </section>
 
 
@@ -138,8 +139,8 @@ ________________________________________________________________________________
       <h2 class="section-heading">EDUCATION</h2>
 
       <!--+++++++++++++++++++++++💻DESKTOP VIEW📗+++++++++++++++++++++++++++-->
-      <div class="ed-card ed-card1" id="ed-card1">
-        <div class="ed-img" id="ed-img1"></div>
+      <div tabindex="0" class="ed-card ed-card1">
+        <div class="ed-img ed-img1"></div>
         <h3 class="ed-heading">ICSE</h3>
         <article class="ed-article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, officiis autem
           quae blanditiis molestias voluptate. Placeat officia molestiae impedit dolorem culpa error ipsa
@@ -147,16 +148,16 @@ ________________________________________________________________________________
         </article>
       </div>
 
-      <div class="ed-card ed-card2" id="ed-card2">
-        <div class="ed-img" id="ed-img2"></div>
+      <div tabindex="0" class="ed-card ed-card2">
+        <div class="ed-img ed-img2"></div>
         <h3 class="ed-heading">ISC</h3>
         <article class="ed-article">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi assumenda qui
           asperiores iure voluptatibus aspernatur itaque, dignissimos eligendi et. In omnis sapiente suscipit
           incidunt expedita!</article>
       </div>
 
-      <div class="ed-card ed-card3" id="ed-card3">
-        <div class="ed-img" id="ed-img3"></div>
+      <div tabindex="0" class="ed-card ed-card3">
+        <div class="ed-img ed-img3"></div>
         <h3 class="ed-heading">BTECH</h3>
         <article class="ed-article">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum, distinctio! Sunt
           abdicta, ratione iure, modi natus quos nemo, autem facilis ipsum nobis soluta ducimus!</article>
@@ -172,7 +173,7 @@ ________________________________________________________________________________
         <div class="swiper-wrapper">
 
           <div class="swiper-slide slide2" id="ed-card1">
-            <div class="ed-img" id="ed-img1"></div>
+            <div class="ed-img ed-img1"></div>
             <h3 class="ed-heading">ICSE</h3>
             <article class="ed-article">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque, officiis autem
               quae blanditiis molestias voluptate. Placeat officia molestiae impedit dolorem culpa error ipsa
@@ -181,7 +182,7 @@ ________________________________________________________________________________
           </div>
 
           <div class="swiper-slide slide2" id="ed-card2">
-            <div class="ed-img" id="ed-img2"></div>
+            <div class="ed-img ed-img2"></div>
             <h3 class="ed-heading">ISC</h3>
             <article class="ed-article">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi assumenda qui
               asperiores iure voluptatibus aspernatur itaque, dignissimos eligendi et. In omnis sapiente suscipit
@@ -189,7 +190,7 @@ ________________________________________________________________________________
           </div>
 
           <div class="swiper-slide slide2" id="ed-card3">
-            <div class="ed-img" id="ed-img3"></div>
+            <div class="ed-img ed-img3"></div>
             <h3 class="ed-heading">BTECH</h3>
             <article class="ed-article">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum, distinctio! Sunt
               abdicta, ratione iure, modi natus quos nemo, autem facilis ipsum nobis soluta ducimus!</article>
