several updates, optimized for SEO, used new-gen image formats & svgs

--- a/index.html
+++ b/index.html
@@ -3,29 +3,52 @@
 <html lang="en">
 
 <head>
+  <title>Surojit - Web Developer Portfolio</title>
+  <link rel="icon" href="favicon.ico?" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
+
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Surojit - Web Developer Portfolio</title>
-  <meta name="description" content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
-  <meta name="keywords" content="web development, portfolio, Surojit, projects, skills">
-  <!-- <link rel="canonical" href="https://www.yourportfolio.com"> -->
-  
+  <meta name="description"
+    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+  <meta name="keywords" content="web development, portfolio, Surojit, projects, skills, django, python">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://mondalsurojit.github.io/Surojit/">
+
   <meta property="og:title" content="Surojit - Web Developer Portfolio">
-  <meta property="og:description" content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
-  <!-- <meta property="og:image" content="https://www.yourportfolio.com/images/preview-image.jpg">
-  <meta property="og:url" content="https://www.yourportfolio.com"> -->
-  
-  <!-- <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:site" content="@yourTwitterHandle">
+  <meta property="og:description"
+    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+  <meta property="og:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
+  <meta property="og:url" content="https://mondalsurojit.github.io/Surojit/">
+
+  <meta property="linkedin:title" content="Surojit - Web Developer Portfolio">
+  <meta property="linkedin:description"
+    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+  <meta property="linkedin:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
+  <meta property="linkedin:url" content="https://mondalsurojit.github.io/Surojit/">
+  <meta property="linkedin:site" content="surojitmondal">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <!-- <meta name="twitter:site" content="@yourTwitterHandle"> -->
   <meta name="twitter:title" content="Surojit - Web Developer Portfolio">
-  <meta name="twitter:description" content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
-  <meta name="twitter:image" content="https://www.yourportfolio.com/images/preview-image.jpg"> -->
+  <meta name="twitter:description"
+    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+  <meta name="twitter:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
+
+  <meta property="og:title" content="Surojit - Web Developer Portfolio">
+  <meta property="og:description"
+    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+  <meta property="og:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
+  <meta property="og:url" content="https://mondalsurojit.github.io/Surojit/">
+  <meta property="og:type" content="website">
+  <!-- <meta property="og:site_name" content="Your Site Name"> -->
+  <meta property="og:locale" content="en_US">
 
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/style-mobile.css" media="(max-width: 875px)">
   <link rel="stylesheet" href="css/style-desktop.css" media="(min-width:876px)">
-  <img src="../images/noise.svg" alt="Preloaded Image" style="display: none;">
-  <!-- <link rel="preload" href="../images/noise.svg" as="image"> -->
+  <!-- <img src="../images/noise.svg" alt="Preloaded Image" style="display: none;"> -->
+  <link rel="preload" href="../images/noise.svg" as="image">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
   <script src="https://kit.fontawesome.com/266833c2f6.js" crossorigin="anonymous" defer></script>
@@ -240,10 +263,105 @@ ________________________________________________________________________________
 
       <div class="swiper mySwiper3">
         <div class="swiper-wrapper">
-          <div class="swiper-slide slide3" id="swiper-slide-1">Slide 1</div>
-          <div class="swiper-slide slide3" id="swiper-slide-2">Slide 2</div>
-          <div class="swiper-slide slide3" id="swiper-slide-3">Slide 3</div>
-          <div class="swiper-slide slide3" id="swiper-slide-4">Slide 4</div>
+          <div class="swiper-slide slide3 swiper-slide-class" id="swiper-slide-1">
+            <h3 class="skill-heading"><i class="fa-solid fa-code"></i> Development</h3>
+            <ul>
+              <li>
+                <figure id="dev-skill-1"></figure>
+              </li>
+              <li>
+                <figure id="dev-skill-2"></figure>
+              </li>
+              <li>
+                <figure id="dev-skill-3"></figure>
+              </li>
+              <li>
+                <figure id="dev-skill-4"></figure>
+              </li>
+              <li>
+                <figure id="dev-skill-5"></figure>
+              </li>
+              <li>
+                <figure id="dev-skill-6"></figure>
+              </li>
+              <li>
+                <figure id="dev-skill-7"></figure>
+              </li>
+              <li>
+                <figure id="dev-skill-8"></figure>
+              </li>
+            </ul>
+          </div>
+
+          <div class="swiper-slide slide3 swiper-slide-class" id="swiper-slide-2">
+            <h3 class="skill-heading"><i class="fa-regular fa-file-code"></i> Programming</h3>
+            <ul>
+              <li>
+                <figure id="prog-skill-1"></figure>
+              </li>
+              <li>
+                <figure id="prog-skill-2"></figure>
+              </li>
+              <li>
+                <figure id="prog-skill-3"></figure>
+              </li>
+              <li>
+                <figure id="prog-skill-4"></figure>
+              </li>
+            </ul>
+          </div>
+
+          <div class="swiper-slide slide3 swiper-slide-class" id="swiper-slide-3">
+            <h3 class="skill-heading"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</h3>
+            <ul>
+              <li>
+                <figure id="tool-1"></figure>
+              </li>
+              <li>
+                <figure id="tool-2"></figure>
+              </li>
+              <li>
+                <figure id="tool-3"></figure>
+              </li>
+              <li>
+                <figure id="tool-4"></figure>
+              </li>
+            </ul>
+          </div>
+
+          <!-- <div class="swiper-slide slide3 swiper-slide-class" id="swiper-slide-4">
+            <h3 class="skill-heading"><i class="fa-solid fa-book-atlas"></i> General</h3>
+            <ul>
+              <li>
+                <figure id="gen-skill-1"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-2"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-3"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-4"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-5"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-6"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-7"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-8"></figure>
+              </li>
+              <li>
+                <figure id="gen-skill-9"></figure>
+              </li>
+            </ul>
+          </div> -->
+
         </div>
         <div class="swiper-pagination"></div>
       </div>
@@ -260,7 +378,8 @@ ________________________________________________________________________________
       <!-- <h2>CONTACT ME</h2>-->
       <iframe
         src="https://docs.google.com/forms/d/e/1FAIpQLSfoqIPn6fy7Osy5CtHvAdO8LymRxCp29YbW0TbQBSLjWlHDNg/viewform?embedded=true"
-        width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0" title="Contact Form">Loading…</iframe>
+        width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0"
+        title="Contact Form">Loading…</iframe>
     </section>
 
 
