--- a/index.html
+++ b/index.html
@@ -3,60 +3,70 @@
 <html lang="en">
 
 <head>
-  <title>Surojit - Web Developer Portfolio</title>
-  <link rel="icon" href="favicon.ico?" type="image/x-icon">
-  <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
-
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- SEO Metadata -->
+  <title>Surojit - Web Developer Portfolio</title>
   <meta name="description"
-    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+    content="Explore the portfolio of Surojit Mondal, a skilled web developer showcasing projects and skills in web development.">
   <meta name="keywords" content="web development, portfolio, Surojit, projects, skills, django, python">
   <meta name="robots" content="index, follow">
+
+  <!-- Canonical URL -->
   <link rel="canonical" href="https://mondalsurojit.github.io/Surojit/">
 
+  <!-- Open Graph (OG) Metadata for Social Sharing -->
   <meta property="og:title" content="Surojit - Web Developer Portfolio">
   <meta property="og:description"
-    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+    content="Explore the portfolio of Surojit Mondal, a skilled web developer showcasing projects and skills in web development.">
   <meta property="og:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
   <meta property="og:url" content="https://mondalsurojit.github.io/Surojit/">
+  <meta property="og:type" content="website">
+  <meta property="og:locale" content="en_US">
 
+  <!-- LinkedIn Metadata -->
   <meta property="linkedin:title" content="Surojit - Web Developer Portfolio">
   <meta property="linkedin:description"
-    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+    content="Explore the portfolio of Surojit Mondal, a skilled web developer showcasing projects and skills in web development.">
   <meta property="linkedin:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
   <meta property="linkedin:url" content="https://mondalsurojit.github.io/Surojit/">
   <meta property="linkedin:site" content="surojitmondal">
 
+  <!-- Twitter Metadata -->
   <meta name="twitter:card" content="summary_large_image">
-  <!-- <meta name="twitter:site" content="@yourTwitterHandle"> -->
   <meta name="twitter:title" content="Surojit - Web Developer Portfolio">
   <meta name="twitter:description"
-    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
+    content="Explore the portfolio of Surojit Mondal, a skilled web developer showcasing projects and skills in web development.">
   <meta name="twitter:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
 
-  <meta property="og:title" content="Surojit - Web Developer Portfolio">
-  <meta property="og:description"
-    content="Explore the portfolio of Surojit, a skilled web developer showcasing projects and skills in web development.">
-  <meta property="og:image" content="https://mondalsurojit.github.io/Surojit/images/preview-image.webp">
-  <meta property="og:url" content="https://mondalsurojit.github.io/Surojit/">
-  <meta property="og:type" content="website">
-  <!-- <meta property="og:site_name" content="Your Site Name"> -->
-  <meta property="og:locale" content="en_US">
+  <!-- Favicon -->
+  <link rel="icon" href="favicon.ico?" type="image/x-icon">
+  <link rel="shortcut icon" href="favicon.ico?" type="image/x-icon">
 
+  <!-- Stylesheets -->
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/style-mobile.css" media="(max-width: 875px)">
   <link rel="stylesheet" href="css/style-desktop.css" media="(min-width:876px)">
-  <!-- <img src="../images/noise.svg" alt="Preloaded Image" style="display: none;"> -->
+
+  <!-- Preload Image -->
   <link rel="preload" href="../images/noise.svg" as="image">
+
+  <!-- External Libraries -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
-  <script src="https://kit.fontawesome.com/266833c2f6.js" crossorigin="anonymous" defer></script>
-  <script src="script.js" defer></script>
+
 </head>
 
+
 <body>
-  <!-- <div id="preloader"></div> -->
+  <div id="preloader">
+    <div class="loader"></div>
+    <div id="text-wrapper">
+      <p id="preloader-text">Hey there !!! Welcome to Surojit Mondal's site</p>
+      <p id="caret">|</p>
+    </div>
+  </div>
+
 
 
   <!--
@@ -155,6 +165,14 @@ ________________________________________________________________________________
     </section>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" defer></script>
+    <script src="https://kit.fontawesome.com/266833c2f6.js" crossorigin="anonymous" defer></script>
+
+    <!-- Custom Script -->
+    <script src="script.js" defer></script>
+
+
+
     <!--
 +++++++++++++++++++++++++++++++++++++++++++++++++++++++🏷️👇PROJECTS SECTION👇🏷️++++++++++++++++++++++++++++++++++++++++++++++
 _______________________________________________________________________________________________________________________________-->
@@ -163,6 +181,7 @@ ________________________________________________________________________________
 
     <section id="projects">
       <h2 class="section-heading">MY PROJECTS</h2>
+      <div id="laptop-mockup"></div>
     </section>
 
 
