Titles added, svg images used, favicon updated

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ ________________________________________________________________________________
 
 
   <header>
-    <a href="#home">
+    <a href="#home" title="Home">
       <h1>SM</h1>
     </a>
     <ul class="nav">
@@ -115,7 +115,7 @@ ________________________________________________________________________________
       <div class="circle1"></div>
       <div class="circle2"></div>
       <div class="container"></div>
-      <button class="profile-photo" aria-label="Profile Photo"></button>
+      <button class="profile-photo" aria-label="View Status" title="View Status"></button>
       <div class="dialog-bg"></div>
       <dialog id="profile-story">
         <button>×</button>
@@ -136,7 +136,7 @@ ________________________________________________________________________________
         <a href="https://www.linkedin.com/in/surojitmondal/" target="_blank" title="My LinkedIn"><i
             class="fa-brands fa-linkedin"></i></a>
 
-        <a href="https://github.com/mondalsurojit" target="_blank" title="My Github"><i
+        <a href="https://github.com/mondalsurojit" target="_blank" title="My GitHub"><i
             class="fa-brands fa-github"></i></a>
 
         <a href="mailto:surojitmondalit@gmail.com?subject=From%20Website" target="_blank" title="Mail Me"><i
@@ -154,14 +154,14 @@ ________________________________________________________________________________
 
 
     <section id="photos">
-      <div tabindex="0" class="photo-prop"></div>
-      <div tabindex="0" class="photo-prop"></div>
-      <div tabindex="0" class="photo-prop"></div>
-      <div tabindex="0" class="photo-prop"></div>
-      <div tabindex="0" class="photo-prop"></div>
-      <div tabindex="0" class="photo-prop"></div>
-      <div tabindex="0" class="photo-prop"></div>
-      <div tabindex="0" class="photo-prop"></div>
+      <div tabindex="0" class="photo-prop" title="Just me"></div>
+      <div tabindex="0" class="photo-prop" title="Fresher2k23 group photo"></div>
+      <div tabindex="0" class="photo-prop" title="My workstation"></div>
+      <div tabindex="0" class="photo-prop" title="Outing with my friends!"></div>
+      <div tabindex="0" class="photo-prop" title="Sandwich party!"></div>
+      <div tabindex="0" class="photo-prop" title="Me & Manish"></div>
+      <div tabindex="0" class="photo-prop" title="Just us"></div>
+      <div tabindex="0" class="photo-prop" title="Me & Sanidhya"></div>
     </section>
 
 
@@ -285,28 +285,28 @@ ________________________________________________________________________________
           <div class="swiper-slide slide3 swiper-slide-class" id="swiper-slide-1">
             <h3 class="skill-heading"><i class="fa-solid fa-code"></i> Development</h3>
             <ul>
-              <li>
+              <li title="HTML">
                 <figure id="dev-skill-1"></figure>
               </li>
-              <li>
+              <li title="CSS">
                 <figure id="dev-skill-2"></figure>
               </li>
-              <li>
+              <li title="JavaScript">
                 <figure id="dev-skill-3"></figure>
               </li>
-              <li>
+              <li title="Bootstrap">
                 <figure id="dev-skill-4"></figure>
               </li>
-              <li>
+              <li title="GSAP">
                 <figure id="dev-skill-5"></figure>
               </li>
-              <li>
+              <li title="SwiperJS">
                 <figure id="dev-skill-6"></figure>
               </li>
-              <li>
+              <li title="Django">
                 <figure id="dev-skill-7"></figure>
               </li>
-              <li>
+              <li title="SQLite">
                 <figure id="dev-skill-8"></figure>
               </li>
             </ul>
@@ -315,16 +315,16 @@ ________________________________________________________________________________
           <div class="swiper-slide slide3 swiper-slide-class" id="swiper-slide-2">
             <h3 class="skill-heading"><i class="fa-regular fa-file-code"></i> Programming</h3>
             <ul>
-              <li>
+              <li title="C++">
                 <figure id="prog-skill-1"></figure>
               </li>
-              <li>
+              <li title="Java">
                 <figure id="prog-skill-2"></figure>
               </li>
-              <li>
+              <li title="JavaScript">
                 <figure id="prog-skill-3"></figure>
               </li>
-              <li>
+              <li title="Python">
                 <figure id="prog-skill-4"></figure>
               </li>
             </ul>
@@ -333,16 +333,16 @@ ________________________________________________________________________________
           <div class="swiper-slide slide3 swiper-slide-class" id="swiper-slide-3">
             <h3 class="skill-heading"><i class="fa-solid fa-screwdriver-wrench"></i> Tools</h3>
             <ul>
-              <li>
+              <li title="Git">
                 <figure id="tool-1"></figure>
               </li>
-              <li>
+              <li title="GitHub">
                 <figure id="tool-2"></figure>
               </li>
-              <li>
+              <li title="VS Code">
                 <figure id="tool-3"></figure>
               </li>
-              <li>
+              <li title="Figma">
                 <figure id="tool-4"></figure>
               </li>
             </ul>
