--- a/index.html
+++ b/index.html
@@ -59,13 +59,15 @@
 
 
 <body>
-  <div id="preloader">
+  <!-- <div id="preloader">
     <div class="loader"></div>
     <div id="text-wrapper">
       <p id="preloader-text">Hey there !!! Welcome to Surojit Mondal's site</p>
       <p id="caret">|</p>
     </div>
-  </div>
+  </div> -->
+
+  <div id="cursor"></div>
 
 
 
@@ -129,7 +131,7 @@ ________________________________________________________________________________
 
       <dialog id="resume-container">
         <iframe src="resume.pdf" frameborder="0" id="resume" title="My Resume"></iframe>
-        <button>×</button>
+        <button class="dialog-close">×</button>
       </dialog>
 
       <div id="icons-on-home">
@@ -162,6 +164,9 @@ ________________________________________________________________________________
       <div tabindex="0" class="photo-prop" title="Me & Manish"></div>
       <div tabindex="0" class="photo-prop" title="Just us"></div>
       <div tabindex="0" class="photo-prop" title="Me & Sanidhya"></div>
+      <dialog id="photos-dialog">
+        <button class="dialog-close">×</button>
+      </dialog>
     </section>
 
 
@@ -182,6 +187,9 @@ ________________________________________________________________________________
     <section id="projects">
       <h2 class="section-heading">MY PROJECTS</h2>
       <div id="laptop-mockup"></div>
+      <div id="laptop-container">
+
+      </div>
     </section>
 
 
@@ -193,6 +201,35 @@ ________________________________________________________________________________
 
     <section id="experience">
       <h2 class="section-heading">EXPERIENCE</h2>
+
+
+      <div id="experience-wrapper">
+        <p id="left-scroll">&lt;</p>
+
+        <div id="experience-slider">
+          <div class="experience-slide" id="experience-slide1">
+            <ul>
+              <li class="company-img1"></li>
+              <li class="company-img1"></li>
+              <li class="company-img1"></li>
+            </ul>
+            <div></div>
+          </div>
+
+          <div class="experience-slide" id="experience-slide2">
+            <ul>
+              <li class="company-img2"></li>
+              <li class="company-img2"></li>
+              <li class="company-img2"></li>
+            </ul>
+          </div>
+        </div>
+
+        <p id="right-scroll">&gt;</p>
+      </div>
+
+
+      <div id="experience-description"></div>
     </section>
 
 
